// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get list of mesures 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "H",
    "code_postal": "93000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 94,
    "etablissement": "CAROUF",
    "etablissement_id": null,
    "extinction": null,
    "id": 4,
    "import_flag": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Mesure en cours",
    "ti_id": null,
    "type": "Sauvegarde de justice",
    "ville": "St Denis",
  },
]
`;

exports[`should get list of mesures en attente 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "F",
    "code_postal": "93000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 94,
    "etablissement": null,
    "etablissement_id": null,
    "extinction": null,
    "id": 3,
    "import_flag": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": null,
    "status": "Mesure en attente",
    "ti_id": null,
    "type": "Tutelle",
    "ville": null,
  },
]
`;

exports[`should get list of mesures eteintes 1`] = `
Array [
  Object {
    "annee": "2010-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "F",
    "code_postal": "62000",
    "created_at": "2010-10-05T00:00:00.000Z",
    "date_ouverture": "2010-10-04T22:00:00.000Z",
    "department_id": 63,
    "etablissement": "UDAHF",
    "etablissement_id": null,
    "extinction": "2019-06-30T22:00:00.000Z",
    "id": 1,
    "import_flag": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Eteindre mesure",
    "ti_id": null,
    "type": "Curatelle renforcée à la personne",
    "ville": "Arras",
  },
  Object {
    "annee": "2012-10-05",
    "antenne_id": null,
    "cabinet": null,
    "civilite": "F",
    "code_postal": "92000",
    "created_at": "2012-10-05T00:00:00.000Z",
    "date_ouverture": "2012-10-04T22:00:00.000Z",
    "department_id": 93,
    "etablissement": "CRF1",
    "etablissement_id": null,
    "extinction": null,
    "id": 5,
    "import_flag": null,
    "mandataire_id": 1,
    "numero_dossier": null,
    "numero_rg": null,
    "reason_extinction": null,
    "residence": "oui",
    "status": "Eteindre mesure",
    "ti_id": null,
    "type": "Tutelle aux biens",
    "ville": "St ambroise",
  },
]
`;

exports[`should get list of mesures for maps 1`] = `
Array [
  Object {
    "array_agg": Array [
      "Sauvegarde de justice 2010-10-05",
    ],
    "city": "St Denis",
    "code_postal": "93000",
    "count": "1",
    "latitude": 48.91,
    "longitude": 2.41998,
  },
]
`;
